--- a/random_buttons.ipynb
+++ b/random_buttons.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "authorship_tag": "ABX9TyPF72i47RL0iBeF+NXAW/QD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,47 +28,131 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "9pFb2QgMvCcP",
-        "outputId": "65ecca30-691e-4be5-c26a-a6815172c911"
+        "id": "8G-hXXbekJ_O",
+        "outputId": "791e391f-c63c-4103-d834-94e9e899069d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.0014099999999999998\n",
-            "0.001396\n",
-            "0.001424\n",
-            "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-            "0.008333333333333333\n"
+            "Разница между учётом порядка:\n",
+            "- Когда порядок ВАЖЕН: комбинации [1,2,3] и [3,2,1] считаются РАЗНЫМИ\n",
+            "- Когда порядок НЕ важен: комбинации [1,2,3] и [3,2,1] считаются ОДИНАКОВЫМИ\n",
+            "\n",
+            "\n",
+            "Комбинация: [1, 2, 3]\n",
+            "1. Порядок ВАЖЕН: [1,2,3] ≠ [3,2,1]\n",
+            "   Эмпирическая вероятность: 0.001530\n",
+            "   Теоретическая вероятность: 1/720 ≈ 0.001389\n",
+            "\n",
+            "2. Порядок НЕ важен: [1,2,3] = [3,2,1]\n",
+            "   Эмпирическая вероятность: 0.008450\n",
+            "   Теоретическая вероятность: 1/120 ≈ 0.008333\n",
+            "\n",
+            "Комбинация: [9, 8, 4]\n",
+            "1. Порядок ВАЖЕН: [1,2,3] ≠ [3,2,1]\n",
+            "   Эмпирическая вероятность: 0.001310\n",
+            "   Теоретическая вероятность: 1/720 ≈ 0.001389\n",
+            "\n",
+            "2. Порядок НЕ важен: [1,2,3] = [3,2,1]\n",
+            "   Эмпирическая вероятность: 0.008030\n",
+            "   Теоретическая вероятность: 1/120 ≈ 0.008333\n",
+            "\n",
+            "Комбинация: [7, 1, 2]\n",
+            "1. Порядок ВАЖЕН: [1,2,3] ≠ [3,2,1]\n",
+            "   Эмпирическая вероятность: 0.001540\n",
+            "   Теоретическая вероятность: 1/720 ≈ 0.001389\n",
+            "\n",
+            "2. Порядок НЕ важен: [1,2,3] = [3,2,1]\n",
+            "   Эмпирическая вероятность: 0.008750\n",
+            "   Теоретическая вероятность: 1/120 ≈ 0.008333\n"
           ]
         }
       ],
       "source": [
         "import random\n",
-        "import numpy as np\n",
+        "from itertools import permutations, combinations\n",
         "\n",
-        "def doorbell_press(buttons, open):\n",
-        "  random_buttons = lambda: random.sample(buttons, 3)\n",
-        "  doorbell_presses = [sum(1 for _ in range(100) if random_buttons() == open) for _ in range(20000)]\n",
-        "  return np.mean(doorbell_presses) / 100\n",
+        "def calculate_probabilities(buttons, open_combination, num_attempts=100000):\n",
+        "    \"\"\"\n",
+        "    Рассчитывает вероятности угадывания комбинации кнопок:\n",
+        "    - с учётом порядка нажатия (порядок важен)\n",
+        "    - без учёта порядка нажатия (порядок не важен)\n",
         "\n",
-        "buttons = range(10)\n",
-        "open1 = [1, 2, 3]\n",
-        "open2 = [9, 8, 4]\n",
-        "open3 = [7, 1, 2]\n",
+        "    Параметры:\n",
+        "        buttons - список доступных кнопок\n",
+        "        open_combination - правильная комбинация\n",
+        "        num_attempts - количество испытаний\n",
+        "    \"\"\"\n",
+        "    # Вариант 1: порядок важен (перестановки)\n",
+        "    successes_ordered = 0\n",
         "\n",
-        "print(doorbell_press(buttons, open1))\n",
-        "print(doorbell_press(buttons, open2))\n",
-        "print(doorbell_press(buttons, open3))\n",
+        "    # Вариант 2: порядок не важен (сочетания)\n",
+        "    open_sorted = sorted(open_combination)\n",
+        "    successes_unordered = 0\n",
         "\n",
-        "print(list(buttons))\n",
-        "print(1.0 / 120.0)"
+        "    for _ in range(num_attempts):\n",
+        "        # Генерируем случайную комбинацию\n",
+        "        attempt = random.sample(buttons, 3)\n",
+        "\n",
+        "        # Проверяем для варианта с порядком\n",
+        "        if attempt == open_combination:\n",
+        "            successes_ordered += 1\n",
+        "\n",
+        "        # Проверяем для варианта без порядка\n",
+        "        if sorted(attempt) == open_sorted:\n",
+        "            successes_unordered += 1\n",
+        "\n",
+        "    # Теоретические вероятности\n",
+        "    total_ordered = len(list(permutations(buttons, 3)))  # 720 для 10 кнопок\n",
+        "    total_unordered = len(list(combinations(buttons, 3)))  # 120 для 10 кнопок\n",
+        "\n",
+        "    return {\n",
+        "        'ordered': {\n",
+        "            'empirical': successes_ordered / num_attempts,\n",
+        "            'theoretical': 1 / total_ordered,\n",
+        "            'description': \"Порядок ВАЖЕН: [1,2,3] ≠ [3,2,1]\"\n",
+        "        },\n",
+        "        'unordered': {\n",
+        "            'empirical': successes_unordered / num_attempts,\n",
+        "            'theoretical': 1 / total_unordered,\n",
+        "            'description': \"Порядок НЕ важен: [1,2,3] = [3,2,1]\"\n",
+        "        }\n",
+        "    }\n",
+        "\n",
+        "# Параметры задачи\n",
+        "buttons = list(range(10))  # Кнопки от 0 до 9\n",
+        "test_combinations = [\n",
+        "    [1, 2, 3],\n",
+        "    [9, 8, 4],\n",
+        "    [7, 1, 2]\n",
+        "]\n",
+        "\n",
+        "print(\"\"\"Разница между учётом порядка:\n",
+        "- Когда порядок ВАЖЕН: комбинации [1,2,3] и [3,2,1] считаются РАЗНЫМИ\n",
+        "- Когда порядок НЕ важен: комбинации [1,2,3] и [3,2,1] считаются ОДИНАКОВЫМИ\n",
+        "\"\"\")\n",
+        "\n",
+        "# Проводим испытания для каждой комбинации\n",
+        "for combo in test_combinations:\n",
+        "    results = calculate_probabilities(buttons, combo)\n",
+        "    print(f\"\\nКомбинация: {combo}\")\n",
+        "\n",
+        "    ordered = results['ordered']\n",
+        "    print(f\"1. {ordered['description']}\")\n",
+        "    print(f\"   Эмпирическая вероятность: {ordered['empirical']:.6f}\")\n",
+        "    print(f\"   Теоретическая вероятность: 1/{len(list(permutations(buttons, 3)))} ≈ {ordered['theoretical']:.6f}\")\n",
+        "\n",
+        "    unordered = results['unordered']\n",
+        "    print(f\"\\n2. {unordered['description']}\")\n",
+        "    print(f\"   Эмпирическая вероятность: {unordered['empirical']:.6f}\")\n",
+        "    print(f\"   Теоретическая вероятность: 1/{len(list(combinations(buttons, 3)))} ≈ {unordered['theoretical']:.6f}\")"
       ]
     }
   ]
