--- a/random_buttons.ipynb
+++ b/random_buttons.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPF72i47RL0iBeF+NXAW/QD",
+      "authorship_tag": "ABX9TyPCPaP8lGyN0PXRTitu8x2x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,50 +28,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8G-hXXbekJ_O",
-        "outputId": "791e391f-c63c-4103-d834-94e9e899069d"
+        "outputId": "d12caa96-8685-4a2a-e9f1-5d34e3f059cf"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Разница между учётом порядка:\n",
-            "- Когда порядок ВАЖЕН: комбинации [1,2,3] и [3,2,1] считаются РАЗНЫМИ\n",
-            "- Когда порядок НЕ важен: комбинации [1,2,3] и [3,2,1] считаются ОДИНАКОВЫМИ\n",
+            "Разница между вариантами:\n",
+            "1. Упорядоченные комбинации (порядок важен):\n",
+            "   [1,2,3] ≠ [3,2,1]\n",
+            "   Формула: P(n,k) = n!/(n-k)! = n×(n-1)×...×(n-k+1)\n",
+            "   \n",
+            "2. Неупорядоченные комбинации (порядок не важен):\n",
+            "   [1,2,3] = [3,2,1]\n",
+            "   Формула: C(n,k) = n!/(k!×(n-k)!)\n",
             "\n",
             "\n",
             "Комбинация: [1, 2, 3]\n",
-            "1. Порядок ВАЖЕН: [1,2,3] ≠ [3,2,1]\n",
-            "   Эмпирическая вероятность: 0.001530\n",
-            "   Теоретическая вероятность: 1/720 ≈ 0.001389\n",
+            "1. Упорядоченные (порядок важен):\n",
+            "   Формула: 1/(10P3) = 1/10×9×8 = 1/720\n",
+            "   Теоретическая вероятность: 0.001389\n",
+            "   Эмпирическая вероятность: 0.001370\n",
             "\n",
-            "2. Порядок НЕ важен: [1,2,3] = [3,2,1]\n",
-            "   Эмпирическая вероятность: 0.008450\n",
-            "   Теоретическая вероятность: 1/120 ≈ 0.008333\n",
+            "2. Неупорядоченные (порядок не важен):\n",
+            "   Формула: 1/(10C3) = 1/(10!/(3!×7!)) = 1/120\n",
+            "   Теоретическая вероятность: 0.008333\n",
+            "   Эмпирическая вероятность: 0.008360\n",
             "\n",
             "Комбинация: [9, 8, 4]\n",
-            "1. Порядок ВАЖЕН: [1,2,3] ≠ [3,2,1]\n",
-            "   Эмпирическая вероятность: 0.001310\n",
-            "   Теоретическая вероятность: 1/720 ≈ 0.001389\n",
+            "1. Упорядоченные (порядок важен):\n",
+            "   Формула: 1/(10P3) = 1/10×9×8 = 1/720\n",
+            "   Теоретическая вероятность: 0.001389\n",
+            "   Эмпирическая вероятность: 0.001040\n",
             "\n",
-            "2. Порядок НЕ важен: [1,2,3] = [3,2,1]\n",
-            "   Эмпирическая вероятность: 0.008030\n",
-            "   Теоретическая вероятность: 1/120 ≈ 0.008333\n",
+            "2. Неупорядоченные (порядок не важен):\n",
+            "   Формула: 1/(10C3) = 1/(10!/(3!×7!)) = 1/120\n",
+            "   Теоретическая вероятность: 0.008333\n",
+            "   Эмпирическая вероятность: 0.008340\n",
             "\n",
             "Комбинация: [7, 1, 2]\n",
-            "1. Порядок ВАЖЕН: [1,2,3] ≠ [3,2,1]\n",
-            "   Эмпирическая вероятность: 0.001540\n",
-            "   Теоретическая вероятность: 1/720 ≈ 0.001389\n",
+            "1. Упорядоченные (порядок важен):\n",
+            "   Формула: 1/(10P3) = 1/10×9×8 = 1/720\n",
+            "   Теоретическая вероятность: 0.001389\n",
+            "   Эмпирическая вероятность: 0.001300\n",
             "\n",
-            "2. Порядок НЕ важен: [1,2,3] = [3,2,1]\n",
-            "   Эмпирическая вероятность: 0.008750\n",
-            "   Теоретическая вероятность: 1/120 ≈ 0.008333\n"
+            "2. Неупорядоченные (порядок не важен):\n",
+            "   Формула: 1/(10C3) = 1/(10!/(3!×7!)) = 1/120\n",
+            "   Теоретическая вероятность: 0.008333\n",
+            "   Эмпирическая вероятность: 0.008390\n"
           ]
         }
       ],
@@ -81,78 +92,71 @@
         "\n",
         "def calculate_probabilities(buttons, open_combination, num_attempts=100000):\n",
         "    \"\"\"\n",
-        "    Рассчитывает вероятности угадывания комбинации кнопок:\n",
-        "    - с учётом порядка нажатия (порядок важен)\n",
-        "    - без учёта порядка нажатия (порядок не важен)\n",
-        "\n",
-        "    Параметры:\n",
-        "        buttons - список доступных кнопок\n",
-        "        open_combination - правильная комбинация\n",
-        "        num_attempts - количество испытаний\n",
+        "    Рассчитывает вероятности угадывания комбинации кнопок.\n",
+        "    Возвращает результаты для двух случаев:\n",
+        "    1. Когда порядок нажатия важен (упорядоченные комбинации)\n",
+        "    2. Когда порядок не важен (неупорядоченные комбинации)\n",
         "    \"\"\"\n",
-        "    # Вариант 1: порядок важен (перестановки)\n",
         "    successes_ordered = 0\n",
-        "\n",
-        "    # Вариант 2: порядок не важен (сочетания)\n",
-        "    open_sorted = sorted(open_combination)\n",
         "    successes_unordered = 0\n",
+        "    open_sorted = sorted(open_combination)\n",
         "\n",
         "    for _ in range(num_attempts):\n",
-        "        # Генерируем случайную комбинацию\n",
         "        attempt = random.sample(buttons, 3)\n",
-        "\n",
-        "        # Проверяем для варианта с порядком\n",
         "        if attempt == open_combination:\n",
         "            successes_ordered += 1\n",
-        "\n",
-        "        # Проверяем для варианта без порядка\n",
         "        if sorted(attempt) == open_sorted:\n",
         "            successes_unordered += 1\n",
         "\n",
-        "    # Теоретические вероятности\n",
-        "    total_ordered = len(list(permutations(buttons, 3)))  # 720 для 10 кнопок\n",
-        "    total_unordered = len(list(combinations(buttons, 3)))  # 120 для 10 кнопок\n",
+        "    n = len(buttons)\n",
+        "    k = len(open_combination)\n",
+        "\n",
+        "    # Формулы для теоретических вероятностей\n",
+        "    ordered_formula = f\"1/({n}P{k}) = 1/{n}×{n-1}×{n-2} = 1/{n*(n-1)*(n-2)}\"\n",
+        "    unordered_formula = f\"1/({n}C{k}) = 1/({n}!/({k}!×{n-k}!)) = 1/{len(list(combinations(buttons, k)))}\"\n",
         "\n",
         "    return {\n",
         "        'ordered': {\n",
         "            'empirical': successes_ordered / num_attempts,\n",
-        "            'theoretical': 1 / total_ordered,\n",
-        "            'description': \"Порядок ВАЖЕН: [1,2,3] ≠ [3,2,1]\"\n",
+        "            'theoretical': 1 / len(list(permutations(buttons, k))),\n",
+        "            'formula': ordered_formula\n",
         "        },\n",
         "        'unordered': {\n",
         "            'empirical': successes_unordered / num_attempts,\n",
-        "            'theoretical': 1 / total_unordered,\n",
-        "            'description': \"Порядок НЕ важен: [1,2,3] = [3,2,1]\"\n",
+        "            'theoretical': 1 / len(list(combinations(buttons, k))),\n",
+        "            'formula': unordered_formula\n",
         "        }\n",
         "    }\n",
         "\n",
-        "# Параметры задачи\n",
+        "# Основные параметры\n",
         "buttons = list(range(10))  # Кнопки от 0 до 9\n",
-        "test_combinations = [\n",
-        "    [1, 2, 3],\n",
-        "    [9, 8, 4],\n",
-        "    [7, 1, 2]\n",
-        "]\n",
+        "test_combinations = [[1, 2, 3], [9, 8, 4], [7, 1, 2]]\n",
         "\n",
-        "print(\"\"\"Разница между учётом порядка:\n",
-        "- Когда порядок ВАЖЕН: комбинации [1,2,3] и [3,2,1] считаются РАЗНЫМИ\n",
-        "- Когда порядок НЕ важен: комбинации [1,2,3] и [3,2,1] считаются ОДИНАКОВЫМИ\n",
+        "# Пояснение разницы между вариантами\n",
+        "print(\"\"\"Разница между вариантами:\n",
+        "1. Упорядоченные комбинации (порядок важен):\n",
+        "   [1,2,3] ≠ [3,2,1]\n",
+        "   Формула: P(n,k) = n!/(n-k)! = n×(n-1)×...×(n-k+1)\n",
+        "\n",
+        "2. Неупорядоченные комбинации (порядок не важен):\n",
+        "   [1,2,3] = [3,2,1]\n",
+        "   Формула: C(n,k) = n!/(k!×(n-k)!)\n",
         "\"\"\")\n",
         "\n",
-        "# Проводим испытания для каждой комбинации\n",
+        "# Проводим испытания\n",
         "for combo in test_combinations:\n",
         "    results = calculate_probabilities(buttons, combo)\n",
         "    print(f\"\\nКомбинация: {combo}\")\n",
         "\n",
-        "    ordered = results['ordered']\n",
-        "    print(f\"1. {ordered['description']}\")\n",
-        "    print(f\"   Эмпирическая вероятность: {ordered['empirical']:.6f}\")\n",
-        "    print(f\"   Теоретическая вероятность: 1/{len(list(permutations(buttons, 3)))} ≈ {ordered['theoretical']:.6f}\")\n",
+        "    print(\"1. Упорядоченные (порядок важен):\")\n",
+        "    print(f\"   Формула: {results['ordered']['formula']}\")\n",
+        "    print(f\"   Теоретическая вероятность: {results['ordered']['theoretical']:.6f}\")\n",
+        "    print(f\"   Эмпирическая вероятность: {results['ordered']['empirical']:.6f}\")\n",
         "\n",
-        "    unordered = results['unordered']\n",
-        "    print(f\"\\n2. {unordered['description']}\")\n",
-        "    print(f\"   Эмпирическая вероятность: {unordered['empirical']:.6f}\")\n",
-        "    print(f\"   Теоретическая вероятность: 1/{len(list(combinations(buttons, 3)))} ≈ {unordered['theoretical']:.6f}\")"
+        "    print(\"\\n2. Неупорядоченные (порядок не важен):\")\n",
+        "    print(f\"   Формула: {results['unordered']['formula']}\")\n",
+        "    print(f\"   Теоретическая вероятность: {results['unordered']['theoretical']:.6f}\")\n",
+        "    print(f\"   Эмпирическая вероятность: {results['unordered']['empirical']:.6f}\")"
       ]
     }
   ]
