--- a/random_buttons.ipynb
+++ b/random_buttons.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCPaP8lGyN0PXRTitu8x2x",
+      "authorship_tag": "ABX9TyMLvnqFffavoGQ68JFaPnvg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,135 +28,116 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8G-hXXbekJ_O",
-        "outputId": "d12caa96-8685-4a2a-e9f1-5d34e3f059cf"
+        "outputId": "9323e8d6-9db7-4415-d90c-68dfa5afab32"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Разница между вариантами:\n",
-            "1. Упорядоченные комбинации (порядок важен):\n",
-            "   [1,2,3] ≠ [3,2,1]\n",
-            "   Формула: P(n,k) = n!/(n-k)! = n×(n-1)×...×(n-k+1)\n",
-            "   \n",
-            "2. Неупорядоченные комбинации (порядок не важен):\n",
-            "   [1,2,3] = [3,2,1]\n",
-            "   Формула: C(n,k) = n!/(k!×(n-k)!)\n",
-            "\n",
-            "\n",
+            "Все способы вычисления вероятностей для 10 кнопок (0-9):\n",
             "Комбинация: [1, 2, 3]\n",
-            "1. Упорядоченные (порядок важен):\n",
-            "   Формула: 1/(10P3) = 1/10×9×8 = 1/720\n",
-            "   Теоретическая вероятность: 0.001389\n",
-            "   Эмпирическая вероятность: 0.001370\n",
             "\n",
-            "2. Неупорядоченные (порядок не важен):\n",
-            "   Формула: 1/(10C3) = 1/(10!/(3!×7!)) = 1/120\n",
-            "   Теоретическая вероятность: 0.008333\n",
-            "   Эмпирическая вероятность: 0.008360\n",
+            "Упорядоченные без повторений:\n",
+            "  Формула: 1/P(10,3) = 1/(10×9×8) = 1/720\n",
+            "  Теоретическая вероятность: 0.001389\n",
+            "  Эмпирическая вероятность: 0.001280\n",
             "\n",
-            "Комбинация: [9, 8, 4]\n",
-            "1. Упорядоченные (порядок важен):\n",
-            "   Формула: 1/(10P3) = 1/10×9×8 = 1/720\n",
-            "   Теоретическая вероятность: 0.001389\n",
-            "   Эмпирическая вероятность: 0.001040\n",
+            "Упорядоченные с повторениями:\n",
+            "  Формула: 1/10^3 = 1/1000\n",
+            "  Теоретическая вероятность: 0.001000\n",
+            "  Эмпирическая вероятность: 0.000780\n",
             "\n",
-            "2. Неупорядоченные (порядок не важен):\n",
-            "   Формула: 1/(10C3) = 1/(10!/(3!×7!)) = 1/120\n",
-            "   Теоретическая вероятность: 0.008333\n",
-            "   Эмпирическая вероятность: 0.008340\n",
+            "Неупорядоченные без повторений:\n",
+            "  Формула: 1/C(10,3) = 1/120\n",
+            "  Теоретическая вероятность: 0.008333\n",
+            "  Эмпирическая вероятность: 0.007970\n",
             "\n",
-            "Комбинация: [7, 1, 2]\n",
-            "1. Упорядоченные (порядок важен):\n",
-            "   Формула: 1/(10P3) = 1/10×9×8 = 1/720\n",
-            "   Теоретическая вероятность: 0.001389\n",
-            "   Эмпирическая вероятность: 0.001300\n",
-            "\n",
-            "2. Неупорядоченные (порядок не важен):\n",
-            "   Формула: 1/(10C3) = 1/(10!/(3!×7!)) = 1/120\n",
-            "   Теоретическая вероятность: 0.008333\n",
-            "   Эмпирическая вероятность: 0.008390\n"
+            "Неупорядоченные с повторениями:\n",
+            "  Формула: 1/H(10,3) = 1/220\n",
+            "  Теоретическая вероятность: 0.004545\n",
+            "  Эмпирическая вероятность: 0.006210\n",
+            "\n"
           ]
         }
       ],
       "source": [
         "import random\n",
-        "from itertools import permutations, combinations\n",
+        "from itertools import combinations, combinations_with_replacement, permutations\n",
         "\n",
-        "def calculate_probabilities(buttons, open_combination, num_attempts=100000):\n",
-        "    \"\"\"\n",
-        "    Рассчитывает вероятности угадывания комбинации кнопок.\n",
-        "    Возвращает результаты для двух случаев:\n",
-        "    1. Когда порядок нажатия важен (упорядоченные комбинации)\n",
-        "    2. Когда порядок не важен (неупорядоченные комбинации)\n",
-        "    \"\"\"\n",
-        "    successes_ordered = 0\n",
-        "    successes_unordered = 0\n",
-        "    open_sorted = sorted(open_combination)\n",
-        "\n",
-        "    for _ in range(num_attempts):\n",
-        "        attempt = random.sample(buttons, 3)\n",
-        "        if attempt == open_combination:\n",
-        "            successes_ordered += 1\n",
-        "        if sorted(attempt) == open_sorted:\n",
-        "            successes_unordered += 1\n",
-        "\n",
+        "def calculate_all_probabilities(buttons, combo, attempts=100000):\n",
         "    n = len(buttons)\n",
-        "    k = len(open_combination)\n",
+        "    k = len(combo)\n",
+        "    results = {}\n",
+        "    sorted_combo = sorted(combo)\n",
         "\n",
-        "    # Формулы для теоретических вероятностей\n",
-        "    ordered_formula = f\"1/({n}P{k}) = 1/{n}×{n-1}×{n-2} = 1/{n*(n-1)*(n-2)}\"\n",
-        "    unordered_formula = f\"1/({n}C{k}) = 1/({n}!/({k}!×{n-k}!)) = 1/{len(list(combinations(buttons, k)))}\"\n",
+        "    # 1. Упорядоченные без повторений (порядок важен, уникальные кнопки)\n",
+        "    unique_ordered = sum(1 for _ in range(attempts)\n",
+        "                        if random.sample(buttons, k) == combo) / attempts\n",
+        "\n",
+        "    # 2. Упорядоченные с повторениями (порядок важен, кнопки могут повторяться)\n",
+        "    with_repeats = sum(1 for _ in range(attempts)\n",
+        "                       if [random.choice(buttons) for _ in range(k)] == combo) / attempts\n",
+        "\n",
+        "    # 3. Неупорядоченные без повторений (порядок не важен, уникальные кнопки)\n",
+        "    unique_unordered = sum(1 for _ in range(attempts)\n",
+        "                          if sorted(random.sample(buttons, k)) == sorted_combo) / attempts\n",
+        "\n",
+        "    # 4. Неупорядоченные с повторениями (порядок не важен, кнопки могут повторяться)\n",
+        "    unordered_repeats = sum(1 for _ in range(attempts)\n",
+        "                        if sorted([random.choice(buttons) for _ in range(k)]) == sorted_combo) / attempts\n",
+        "\n",
+        "    # Теоретические вычисления\n",
+        "    P_unique = len(list(permutations(buttons, k)))  # Упорядоченные без повторений\n",
+        "    C_unique = len(list(combinations(buttons, k)))  # Неупорядоченные без повторений\n",
+        "    H_repeats = len(list(combinations_with_replacement(buttons, k)))  # Неупорядоченные с повторениями\n",
         "\n",
         "    return {\n",
-        "        'ordered': {\n",
-        "            'empirical': successes_ordered / num_attempts,\n",
-        "            'theoretical': 1 / len(list(permutations(buttons, k))),\n",
-        "            'formula': ordered_formula\n",
+        "        'Упорядоченные без повторений': {\n",
+        "            'Вероятность': unique_ordered,\n",
+        "            'Теоретическая': 1/P_unique,\n",
+        "            'Формула': f'1/P({n},{k}) = 1/({n}×{n-1}×{n-2}) = 1/{P_unique}'\n",
         "        },\n",
-        "        'unordered': {\n",
-        "            'empirical': successes_unordered / num_attempts,\n",
-        "            'theoretical': 1 / len(list(combinations(buttons, k))),\n",
-        "            'formula': unordered_formula\n",
+        "        'Упорядоченные с повторениями': {\n",
+        "            'Вероятность': with_repeats,\n",
+        "            'Теоретическая': 1/(n**k),\n",
+        "            'Формула': f'1/{n}^{k} = 1/{n**k}'\n",
+        "        },\n",
+        "        'Неупорядоченные без повторений': {\n",
+        "            'Вероятность': unique_unordered,\n",
+        "            'Теоретическая': 1/C_unique,\n",
+        "            'Формула': f'1/C({n},{k}) = 1/{C_unique}'\n",
+        "        },\n",
+        "        'Неупорядоченные с повторениями': {\n",
+        "            'Вероятность': unordered_repeats,\n",
+        "            'Теоретическая': 1/H_repeats,\n",
+        "            'Формула': f'1/H({n},{k}) = 1/{H_repeats}'\n",
         "        }\n",
         "    }\n",
         "\n",
-        "# Основные параметры\n",
-        "buttons = list(range(10))  # Кнопки от 0 до 9\n",
-        "test_combinations = [[1, 2, 3], [9, 8, 4], [7, 1, 2]]\n",
+        "# Используем 10 кнопок (0-9)\n",
+        "buttons = list(range(10))  # 0-9\n",
+        "combo = [1, 2, 3]\n",
         "\n",
-        "# Пояснение разницы между вариантами\n",
-        "print(\"\"\"Разница между вариантами:\n",
-        "1. Упорядоченные комбинации (порядок важен):\n",
-        "   [1,2,3] ≠ [3,2,1]\n",
-        "   Формула: P(n,k) = n!/(n-k)! = n×(n-1)×...×(n-k+1)\n",
+        "# Вычисляем все вероятности\n",
+        "probabilities = calculate_all_probabilities(buttons, combo)\n",
         "\n",
-        "2. Неупорядоченные комбинации (порядок не важен):\n",
-        "   [1,2,3] = [3,2,1]\n",
-        "   Формула: C(n,k) = n!/(k!×(n-k)!)\n",
-        "\"\"\")\n",
+        "# Выводим результаты\n",
+        "print(\"Все способы вычисления вероятностей для 10 кнопок (0-9):\")\n",
+        "print(f\"Комбинация: {combo}\\n\")\n",
         "\n",
-        "# Проводим испытания\n",
-        "for combo in test_combinations:\n",
-        "    results = calculate_probabilities(buttons, combo)\n",
-        "    print(f\"\\nКомбинация: {combo}\")\n",
-        "\n",
-        "    print(\"1. Упорядоченные (порядок важен):\")\n",
-        "    print(f\"   Формула: {results['ordered']['formula']}\")\n",
-        "    print(f\"   Теоретическая вероятность: {results['ordered']['theoretical']:.6f}\")\n",
-        "    print(f\"   Эмпирическая вероятность: {results['ordered']['empirical']:.6f}\")\n",
-        "\n",
-        "    print(\"\\n2. Неупорядоченные (порядок не важен):\")\n",
-        "    print(f\"   Формула: {results['unordered']['formula']}\")\n",
-        "    print(f\"   Теоретическая вероятность: {results['unordered']['theoretical']:.6f}\")\n",
-        "    print(f\"   Эмпирическая вероятность: {results['unordered']['empirical']:.6f}\")"
+        "for name, data in probabilities.items():\n",
+        "    print(f\"{name}:\")\n",
+        "    print(f\"  Формула: {data['Формула']}\")\n",
+        "    print(f\"  Теоретическая вероятность: {data['Теоретическая']:.6f}\")\n",
+        "    print(f\"  Эмпирическая вероятность: {data['Вероятность']:.6f}\")\n",
+        "    print()"
       ]
     }
   ]
