--- a/random_buttons.ipynb
+++ b/random_buttons.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLvnqFffavoGQ68JFaPnvg",
+      "authorship_tag": "ABX9TyOKz32L5tC33QGE+BTRYL4n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,42 +28,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8G-hXXbekJ_O",
-        "outputId": "9323e8d6-9db7-4415-d90c-68dfa5afab32"
+        "outputId": "c94f9405-5bbc-477a-ea93-148bbd1dfd1a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Все способы вычисления вероятностей для 10 кнопок (0-9):\n",
-            "Комбинация: [1, 2, 3]\n",
+            "==================================================\n",
+            "Подробное объяснение типов комбинаций:\n",
+            "1. Упорядоченные - последовательность нажатий ИМЕЕТ значение\n",
+            "   (например, 1-2-3 и 3-2-1 считаются разными комбинациями)\n",
+            "2. Неупорядоченные - последовательность НЕ ИМЕЕТ значения\n",
+            "   (1-2-3 и 3-2-1 считаются одинаковыми)\n",
+            "3. Без повторений - каждая кнопка нажимается только один раз\n",
+            "4. С повторениями - кнопки могут нажиматься несколько раз\n",
+            "==================================================\n",
+            "\n",
+            "Все варианты вероятностей для комбинации [1, 2, 3] (кнопки 0-9):\n",
             "\n",
             "Упорядоченные без повторений:\n",
-            "  Формула: 1/P(10,3) = 1/(10×9×8) = 1/720\n",
-            "  Теоретическая вероятность: 0.001389\n",
-            "  Эмпирическая вероятность: 0.001280\n",
+            "  • Порядок ВАЖЕН (1-2-3 ≠ 3-2-1), кнопки НЕ повторяются\n",
+            "  • Формула: 1/P(10,3) = 1/(10×9×8) = 1/720\n",
+            "  • Теоретическая вероятность: 0.001389\n",
+            "  • Практическая вероятность: 0.001410\n",
             "\n",
             "Упорядоченные с повторениями:\n",
-            "  Формула: 1/10^3 = 1/1000\n",
-            "  Теоретическая вероятность: 0.001000\n",
-            "  Эмпирическая вероятность: 0.000780\n",
+            "  • Порядок ВАЖЕН (1-1-2 ≠ 1-2-1), кнопки МОГУТ повторяться\n",
+            "  • Формула: 1/10^3 = 1/1000\n",
+            "  • Теоретическая вероятность: 0.001000\n",
+            "  • Практическая вероятность: 0.000910\n",
             "\n",
             "Неупорядоченные без повторений:\n",
-            "  Формула: 1/C(10,3) = 1/120\n",
-            "  Теоретическая вероятность: 0.008333\n",
-            "  Эмпирическая вероятность: 0.007970\n",
+            "  • Порядок НЕ важен (1-2-3 = 3-2-1), кнопки НЕ повторяются\n",
+            "  • Формула: 1/C(10,3) = 1/120\n",
+            "  • Теоретическая вероятность: 0.008333\n",
+            "  • Практическая вероятность: 0.008630\n",
             "\n",
             "Неупорядоченные с повторениями:\n",
-            "  Формула: 1/H(10,3) = 1/220\n",
-            "  Теоретическая вероятность: 0.004545\n",
-            "  Эмпирическая вероятность: 0.006210\n",
-            "\n"
+            "  • Порядок НЕ важен (1-1-2 = 1-2-1), кнопки МОГУТ повторяться\n",
+            "  • Формула: 1/H(10,3) = 1/220\n",
+            "  • Теоретическая вероятность: 0.004545\n",
+            "  • Практическая вероятность: 0.006090\n"
           ]
         }
       ],
@@ -72,24 +84,35 @@
         "from itertools import combinations, combinations_with_replacement, permutations\n",
         "\n",
         "def calculate_all_probabilities(buttons, combo, attempts=100000):\n",
+        "    \"\"\"\n",
+        "    Рассчитывает вероятности угадывания комбинации для всех типов:\n",
+        "    1. Упорядоченные без повторений\n",
+        "    2. Упорядоченные с повторениями\n",
+        "    3. Неупорядоченные без повторений\n",
+        "    4. Неупорядоченные с повторениями\n",
+        "    \"\"\"\n",
         "    n = len(buttons)\n",
         "    k = len(combo)\n",
         "    results = {}\n",
         "    sorted_combo = sorted(combo)\n",
         "\n",
-        "    # 1. Упорядоченные без повторений (порядок важен, уникальные кнопки)\n",
+        "    # 1. Упорядоченные без повторений\n",
+        "    # Порядок ВАЖЕН (1-2-3 ≠ 3-2-1), кнопки НЕ повторяются\n",
         "    unique_ordered = sum(1 for _ in range(attempts)\n",
         "                        if random.sample(buttons, k) == combo) / attempts\n",
         "\n",
-        "    # 2. Упорядоченные с повторениями (порядок важен, кнопки могут повторяться)\n",
+        "    # 2. Упорядоченные с повторениями\n",
+        "    # Порядок ВАЖЕН (1-1-2 ≠ 1-2-1), кнопки МОГУТ повторяться\n",
         "    with_repeats = sum(1 for _ in range(attempts)\n",
         "                       if [random.choice(buttons) for _ in range(k)] == combo) / attempts\n",
         "\n",
-        "    # 3. Неупорядоченные без повторений (порядок не важен, уникальные кнопки)\n",
+        "    # 3. Неупорядоченные без повторений\n",
+        "    # Порядок НЕ важен (1-2-3 = 3-2-1), кнопки НЕ повторяются\n",
         "    unique_unordered = sum(1 for _ in range(attempts)\n",
         "                          if sorted(random.sample(buttons, k)) == sorted_combo) / attempts\n",
         "\n",
-        "    # 4. Неупорядоченные с повторениями (порядок не важен, кнопки могут повторяться)\n",
+        "    # 4. Неупорядоченные с повторениями\n",
+        "    # Порядок НЕ важен (1-1-2 = 1-2-1), кнопки МОГУТ повторяться\n",
         "    unordered_repeats = sum(1 for _ in range(attempts)\n",
         "                        if sorted([random.choice(buttons) for _ in range(k)]) == sorted_combo) / attempts\n",
         "\n",
@@ -102,42 +125,54 @@
         "        'Упорядоченные без повторений': {\n",
         "            'Вероятность': unique_ordered,\n",
         "            'Теоретическая': 1/P_unique,\n",
-        "            'Формула': f'1/P({n},{k}) = 1/({n}×{n-1}×{n-2}) = 1/{P_unique}'\n",
+        "            'Формула': f'1/P({n},{k}) = 1/({n}×{n-1}×{n-2}) = 1/{P_unique}',\n",
+        "            'Описание': 'Порядок ВАЖЕН (1-2-3 ≠ 3-2-1), кнопки НЕ повторяются'\n",
         "        },\n",
         "        'Упорядоченные с повторениями': {\n",
         "            'Вероятность': with_repeats,\n",
         "            'Теоретическая': 1/(n**k),\n",
-        "            'Формула': f'1/{n}^{k} = 1/{n**k}'\n",
+        "            'Формула': f'1/{n}^{k} = 1/{n**k}',\n",
+        "            'Описание': 'Порядок ВАЖЕН (1-1-2 ≠ 1-2-1), кнопки МОГУТ повторяться'\n",
         "        },\n",
         "        'Неупорядоченные без повторений': {\n",
         "            'Вероятность': unique_unordered,\n",
         "            'Теоретическая': 1/C_unique,\n",
-        "            'Формула': f'1/C({n},{k}) = 1/{C_unique}'\n",
+        "            'Формула': f'1/C({n},{k}) = 1/{C_unique}',\n",
+        "            'Описание': 'Порядок НЕ важен (1-2-3 = 3-2-1), кнопки НЕ повторяются'\n",
         "        },\n",
         "        'Неупорядоченные с повторениями': {\n",
         "            'Вероятность': unordered_repeats,\n",
         "            'Теоретическая': 1/H_repeats,\n",
-        "            'Формула': f'1/H({n},{k}) = 1/{H_repeats}'\n",
+        "            'Формула': f'1/H({n},{k}) = 1/{H_repeats}',\n",
+        "            'Описание': 'Порядок НЕ важен (1-1-2 = 1-2-1), кнопки МОГУТ повторяться'\n",
         "        }\n",
         "    }\n",
         "\n",
-        "# Используем 10 кнопок (0-9)\n",
-        "buttons = list(range(10))  # 0-9\n",
-        "combo = [1, 2, 3]\n",
+        "# Основные параметры\n",
+        "buttons = list(range(10))  # Кнопки 0-9\n",
+        "combo = [1, 2, 3]  # Тестируемая комбинация\n",
         "\n",
-        "# Вычисляем все вероятности\n",
+        "# Вычисляем вероятности\n",
         "probabilities = calculate_all_probabilities(buttons, combo)\n",
         "\n",
-        "# Выводим результаты\n",
-        "print(\"Все способы вычисления вероятностей для 10 кнопок (0-9):\")\n",
-        "print(f\"Комбинация: {combo}\\n\")\n",
+        "# Выводим результаты с подробными описаниями\n",
+        "print(\"=\"*50)\n",
+        "print(\"Подробное объяснение типов комбинаций:\")\n",
+        "print(\"1. Упорядоченные - последовательность нажатий ИМЕЕТ значение\")\n",
+        "print(\"   (например, 1-2-3 и 3-2-1 считаются разными комбинациями)\")\n",
+        "print(\"2. Неупорядоченные - последовательность НЕ ИМЕЕТ значения\")\n",
+        "print(\"   (1-2-3 и 3-2-1 считаются одинаковыми)\")\n",
+        "print(\"3. Без повторений - каждая кнопка нажимается только один раз\")\n",
+        "print(\"4. С повторениями - кнопки могут нажиматься несколько раз\")\n",
+        "print(\"=\"*50 + \"\\n\")\n",
         "\n",
+        "print(\"Все варианты вероятностей для комбинации [1, 2, 3] (кнопки 0-9):\")\n",
         "for name, data in probabilities.items():\n",
-        "    print(f\"{name}:\")\n",
-        "    print(f\"  Формула: {data['Формула']}\")\n",
-        "    print(f\"  Теоретическая вероятность: {data['Теоретическая']:.6f}\")\n",
-        "    print(f\"  Эмпирическая вероятность: {data['Вероятность']:.6f}\")\n",
-        "    print()"
+        "    print(f\"\\n{name}:\")\n",
+        "    print(f\"  • {data['Описание']}\")\n",
+        "    print(f\"  • Формула: {data['Формула']}\")\n",
+        "    print(f\"  • Теоретическая вероятность: {data['Теоретическая']:.6f}\")\n",
+        "    print(f\"  • Практическая вероятность: {data['Вероятность']:.6f}\")"
       ]
     }
   ]
