--- a/random_simulate.ipynb
+++ b/random_simulate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMR8uIXVvMy8l+S/CHzmfX6",
+      "authorship_tag": "ABX9TyM1TIu79WLicHXnO39ofuUP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,22 +28,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_f2qGTjbZVzE",
-        "outputId": "61d29702-0a80-4054-88c1-57ae81067697"
+        "outputId": "8b370ef8-bca4-4b36-82ab-df5c76d39a1a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Вероятность выпадения красного: 0.3312 (теоретическая: 2/6 ≈ 0.3333)\n",
-            "Вероятность выпадения зеленого: 0.5011 (теоретическая: 3/6 = 0.5000)\n",
-            "Вероятность выпадения синего: 0.1677 (теоретическая: 1/6 ≈ 0.1667)\n"
+            "Вероятность выпадения красного: 0.3339 (теоретическая: 2/6 ≈ 0.3333)\n",
+            "Вероятность выпадения зеленого: 0.4999 (теоретическая: 3/6 = 0.5000)\n",
+            "Вероятность выпадения синего: 0.1662 (теоретическая: 1/6 ≈ 0.1667)\n"
           ]
         }
       ],
@@ -123,16 +123,69 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wxKDUn00aeVl",
-        "outputId": "5436663d-8c29-473b-b593-0fe2725693c3"
+        "outputId": "910a833b-9485-4d2e-ca90-b2299a11c553"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Вероятность победы 1-го игрока: 0.8753 (теоретическая: 1 - (1/2)^3 = 0.875)\n",
-            "Вероятность победы 2-го игрока: 0.1247 (теоретическая: (1/2)^3 = 0.125)\n"
+            "Вероятность победы 1-го игрока: 0.8747 (теоретическая: 1 - (1/2)^3 = 0.875)\n",
+            "Вероятность победы 2-го игрока: 0.1253 (теоретическая: (1/2)^3 = 0.125)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "# Вероятность попадания одной башни\n",
+        "p_hit = 0.2\n",
+        "# Количество башен\n",
+        "n_towers = 7\n",
+        "# Количество экспериментов\n",
+        "n_experiments = 100000\n",
+        "\n",
+        "# Теоретический расчет:\n",
+        "# Вероятность, что ни одна башня не попадет: (1 - p_hit)^n_towers\n",
+        "# Тогда вероятность хотя бы одного попадания: 1 - (1 - p_hit)^n_towers\n",
+        "theoretical_prob = 1 - (1 - p_hit)**n_towers\n",
+        "\n",
+        "# Экспериментальная проверка\n",
+        "successes = 0\n",
+        "for _ in range(n_experiments):\n",
+        "    # Симулируем выстрелы всех башен\n",
+        "    hits = sum(1 for _ in range(n_towers) if random.random() < p_hit)\n",
+        "    # Если хотя бы одна попала - считаем успехом\n",
+        "    if hits >= 1:\n",
+        "        successes += 1\n",
+        "\n",
+        "experimental_prob = successes / n_experiments\n",
+        "\n",
+        "# Вывод результатов\n",
+        "print(f\"Теоретическая вероятность: {theoretical_prob:.4f}\")\n",
+        "print(f\"Экспериментальная вероятность: {experimental_prob:.4f}\")\n",
+        "print(f\"Разница: {abs(theoretical_prob - experimental_prob):.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u4AQyqD192tT",
+        "outputId": "c5729efe-9c3d-4e38-967c-3822ffd6081d"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Теоретическая вероятность: 0.7903\n",
+            "Экспериментальная вероятность: 0.7932\n",
+            "Разница: 0.0029\n"
           ]
         }
       ]
