--- a/XOR_polynomial_fit.ipynb
+++ b/XOR_polynomial_fit.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtq6u99jWiTOPudv7djaj0",
+      "authorship_tag": "ABX9TyOeW/wXb6GFQfzPzXCgXMR5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
         "id": "aTFQfdzF_7kC",
         "outputId": "e9e29e53-43db-4b96-a3af-554a5e1aa3b8"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,6 +118,65 @@
             "[0 1] -> 0.999092 (должно: 1)\n",
             "[1 0] -> 0.999092 (должно: 1)\n",
             "[1 1] -> 0.000702 (должно: 0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Данные\n",
+        "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
+        "y = np.array([0, 1, 1, 0])\n",
+        "\n",
+        "X_poly = np.column_stack([\n",
+        "    np.ones(4), X[:, 0], X[:, 1],\n",
+        "    X[:, 0] * X[:, 1], X[:, 0]**2, X[:, 1]**2\n",
+        "])\n",
+        "\n",
+        "w = np.zeros(6)\n",
+        "\n",
+        "# 1. Численный градиент\n",
+        "epsilon = 1e-5\n",
+        "numerical_grad = np.zeros(6)\n",
+        "\n",
+        "for i in range(6):\n",
+        "    w_plus = w.copy()\n",
+        "    w_minus = w.copy()\n",
+        "    w_plus[i] += epsilon\n",
+        "    w_minus[i] -= epsilon\n",
+        "\n",
+        "    loss_plus = np.mean((X_poly @ w_plus - y) ** 2)\n",
+        "    loss_minus = np.mean((X_poly @ w_minus - y) ** 2)\n",
+        "\n",
+        "    numerical_grad[i] = (loss_plus - loss_minus) / (2 * epsilon)\n",
+        "\n",
+        "# 2. Аналитический градиент\n",
+        "predictions = X_poly @ w\n",
+        "analytical_grad = 2 * X_poly.T @ (predictions - y) / len(y)\n",
+        "\n",
+        "print(\"Сравнение градиентов:\")\n",
+        "print(\"Численный:    \", numerical_grad)\n",
+        "print(\"Аналитический:\", analytical_grad)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ub3j4ignQz3h",
+        "outputId": "a28d8264-5cd6-4947-a9f7-739a2b06cebd"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Сравнение градиентов:\n",
+            "Численный:     [-1.  -0.5 -0.5  0.  -0.5 -0.5]\n",
+            "Аналитический: [-1.  -0.5 -0.5  0.  -0.5 -0.5]\n"
           ]
         }
       ]
